--- a/components/camel-swagger/pom.xml
+++ b/components/camel-swagger/pom.xml
@@ -26,7 +26,7 @@
 
   <artifactId>camel-swagger</artifactId>
   <packaging>bundle</packaging>
-  <name>Camel :: Swagger</name>
+  <name>Camel :: Swagger (deprecated)</name>
   <description>Camel Swagger support</description>
 
   <properties>
