--- a/components/camel-scr/pom.xml
+++ b/components/camel-scr/pom.xml
@@ -31,6 +31,7 @@
 
   <properties>
     <camel.osgi.export.pkg>org.apache.camel.scr</camel.osgi.export.pkg>
+    <camel.osgi.import.camel.version>version="[2.12,$(version;=+;${camel.osgi.version.clean}))"</camel.osgi.import.camel.version>
   </properties>
 
   <dependencies>
