camel-swagger-java - osgi range for jackson so older version can be used.

--- a/components/camel-swagger-java/pom.xml
+++ b/components/camel-swagger-java/pom.xml
@@ -30,6 +30,9 @@
   <description>Camel Swagger Java support</description>
 
   <properties>
+    <camel.osgi.import.before.defaults>
+      com.fasterxml.jackson.*;version="[2.4,3)"
+    </camel.osgi.import.before.defaults>
     <camel.osgi.export.pkg>org.apache.camel.swagger.*</camel.osgi.export.pkg>
   </properties>
 
