--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -287,6 +287,7 @@
     <jodatime-bundle-version>1.6.2</jodatime-bundle-version>
     <jodatime2-bundle-version>2.8.2</jodatime2-bundle-version>
     <jolokia-version>1.3.1</jolokia-version>
+    <jolt-version>0.0.16</jolt-version>
     <josql-bundle-version>1.5_5</josql-bundle-version>
     <josql-version>1.5</josql-version>
     <jruby-version>1.7.18</jruby-version>
