--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -417,6 +417,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
+      <artifactId>camel-jolt</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-josql</artifactId>
     </dependency>
     <dependency>
