--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1085,6 +1085,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-jolt</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-josql</artifactId>
         <version>${project.version}</version>
       </dependency>
