--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -479,6 +479,8 @@
     <spring-ws-version>2.2.1.RELEASE</spring-ws-version>
     <spymemcached-bundle-version>2.5_2</spymemcached-bundle-version> <!-- FIXME cmueller: not in sync! -->
     <spymemcached-version>2.8.4</spymemcached-version>
+    <squareup-okhttp-version>2.5.0</squareup-okhttp-version>
+    <squareup-okio-version>1.6.0</squareup-okio-version>
     <sshd-version>0.14.0</sshd-version>
     <stompjms-version>1.19</stompjms-version>
     <swagger-version>1.3.12</swagger-version>
