CAMEL-8943: camel-jetty should use jetty9 as default

--- a/components/camel-jetty8/pom.xml
+++ b/components/camel-jetty8/pom.xml
@@ -27,7 +27,7 @@
 
   <artifactId>camel-jetty8</artifactId>
   <packaging>bundle</packaging>
-  <name>Camel :: Jetty8</name>
+  <name>Camel :: Jetty8 (deprecated)</name>
   <description>Camel Jetty8 support</description>
 
   <properties>
