--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1047,6 +1047,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-jetty</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-jetty8</artifactId>
         <version>${project.version}</version>
       </dependency>
