--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -385,6 +385,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
+      <artifactId>camel-jetty</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-jetty8</artifactId>
     </dependency>
     <dependency>
