--- a/components/camel-cxf/pom.xml
+++ b/components/camel-cxf/pom.xml
@@ -218,7 +218,7 @@
 
     <dependency>
       <groupId>org.apache.camel</groupId>
-      <artifactId>camel-jetty9</artifactId>
+      <artifactId>camel-jetty</artifactId>
       <scope>test</scope>
     </dependency>
 
