--- a/components/camel-restlet/pom.xml
+++ b/components/camel-restlet/pom.xml
@@ -75,7 +75,7 @@
 
     <dependency>
       <groupId>org.apache.camel</groupId>
-      <artifactId>camel-jetty9</artifactId>
+      <artifactId>camel-jetty</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
