CAMEL-9189: Jackson XML Mapper Data format

--- a/components/pom.xml
+++ b/components/pom.xml
@@ -126,6 +126,7 @@
     <module>camel-infinispan</module>
     <module>camel-irc</module>
     <module>camel-jackson</module>
+    <module>camel-jacksonxml</module>
     <module>camel-javaspace</module>
     <module>camel-jaxb</module>
     <module>camel-jasypt</module>
