--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1019,6 +1019,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-jacksonxml</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-jasypt</artifactId>
         <version>${project.version}</version>
       </dependency>
