CAMEL-9162: camel-elsql component

--- a/components/camel-elsql/pom.xml
+++ b/components/camel-elsql/pom.xml
@@ -34,6 +34,7 @@
       org.apache.camel.component.elsql.*;${camel.osgi.version}
     </camel.osgi.export.pkg>
     <camel.osgi.import.pkg>
+      org.apache.camel.component.sql.*,
       !org.apache.camel.component.elsql.*,
       ${camel.osgi.import.defaults},
       *
