Add camel apt to parent bom

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -607,6 +607,11 @@
       <!-- camel components -->
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>apt</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-core</artifactId>
         <version>${project.version}</version>
       </dependency>
