CAMEL-9162: camel-elsql component

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -838,6 +838,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-elsql</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-eventadmin</artifactId>
         <version>${project.version}</version>
       </dependency>
