--- a/components/camel-elsql/pom.xml
+++ b/components/camel-elsql/pom.xml
@@ -56,7 +56,7 @@
     <dependency>
       <groupId>com.opengamma</groupId>
       <artifactId>elsql</artifactId>
-      <version>1.1</version>
+      <version>${elsql-version}</version>
     </dependency>
 
     <!-- test dependencies -->
