--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -357,6 +357,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
+      <artifactId>camel-jacksonxml</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-jasypt</artifactId>
     </dependency>
     <dependency>
