--- a/components/pom.xml
+++ b/components/pom.xml
@@ -94,6 +94,7 @@
     <module>camel-eclipse</module>
     <module>camel-ejb</module>
     <module>camel-elasticsearch</module>
+    <module>camel-elsql</module>
     <module>camel-eventadmin</module>
     <module>camel-exec</module>
     <module>camel-facebook</module>
