CAMEL-9195: Fixed memory leak in undertow producer. Also allow to configure channel options from the endpoint uri.

--- a/components/camel-undertow/src/test/resources/log4j.properties
+++ b/components/camel-undertow/src/test/resources/log4j.properties
@@ -21,7 +21,7 @@
 log4j.rootLogger=INFO, file
 
 # uncomment the following to enable camel debugging
-#log4j.logger.org.apache.camel.component.undertow=TRACE
+#log4j.logger.org.apache.camel.component.undertow=DEBUG
 #log4j.logger.org.apache.camel.util.jsse=DEBUG
 
 # CONSOLE appender not used by default
