--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -202,16 +202,16 @@
     <guice-bundle-version>3.0_1</guice-bundle-version>
     <hadoop-bundle-version>1.2.1_1</hadoop-bundle-version>
     <hadoop-version>1.2.1</hadoop-version>
-    <hadoop2-bundle-version>2.3.0_2</hadoop2-bundle-version>
-    <hadoop2-version>2.3.0</hadoop2-version>
+    <hadoop2-bundle-version>2.7.1_1</hadoop2-bundle-version>
+    <hadoop2-version>2.7.1</hadoop2-version>
     <hamcrest-version>1.3</hamcrest-version>
     <hapi-version>2.2</hapi-version>
     <hawtbuf-version>1.11</hawtbuf-version>
     <hawtdb-version>1.6</hawtdb-version>
     <hawtdispatch-version>1.21</hawtdispatch-version>
     <hazelcast-version>3.5.2</hazelcast-version>
-    <hbase-version>0.98.5-hadoop2</hbase-version>
-    <hbase-bundle-version>0.98.5-hadoop2_2</hbase-bundle-version>
+    <hbase-version>1.1.1</hbase-version>
+    <hbase-bundle-version>1.1.1_1</hbase-bundle-version>
     <hibernate-validator-version>5.2.2.Final</hibernate-validator-version>
     <!-- Spring 3.2.x and 4.0.x still stick to JPA 2.0. Hibernate 4.3.x upgraded to JPA 2.1. -->
     <hibernate-version>4.2.20.Final</hibernate-version>
