Prevent doclint error from javadoc on JDK8

--- a/pom.xml
+++ b/pom.xml
@@ -552,6 +552,9 @@
                 <goals>
                   <goal>jar</goal>
                 </goals>
+                <configuration>
+                  <additionalparam>${javadoc.opts}</additionalparam>
+                </configuration>
               </execution>
             </executions>
           </plugin>
@@ -617,6 +620,9 @@
                 <goals>
                   <goal>jar</goal>
                 </goals>
+                <configuration>
+                    <additionalparam>${javadoc.opts}</additionalparam>
+                </configuration>
               </execution>
             </executions>
           </plugin>
@@ -639,5 +645,14 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <id>doclint-java8-disable</id>
+      <activation>
+        <jdk>[1.8,)</jdk>
+      </activation>
+      <properties>
+        <javadoc.opts>-Xdoclint:none</javadoc.opts>
+      </properties>
+     </profile>
   </profiles>
 </project>
