CAMEL-8959: Remove old code from camel-cxf no longer needed due the CXF 3.0+ upgrade

--- a/components/camel-cxf-transport/pom.xml
+++ b/components/camel-cxf-transport/pom.xml
@@ -73,6 +73,11 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
     </dependency>
+    
+    <dependency>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-servlet_3.0_spec</artifactId>
+    </dependency>
 
     <!-- OSGi, Blueprint -->
     <dependency>
