--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -480,6 +480,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
+      <artifactId>camel-kubernetes</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-kura</artifactId>
     </dependency>
     <dependency>
