--- a/components/camel-kubernetes/pom.xml
+++ b/components/camel-kubernetes/pom.xml
@@ -36,12 +36,12 @@
     <dependency>
       <groupId>io.fabric8</groupId>
       <artifactId>kubernetes-client</artifactId>
-      <version>1.3.52</version>
+      <version>${kubernetes-client-version}</version>
     </dependency>
     <dependency>
       <groupId>io.fabric8</groupId>
       <artifactId>openshift-client</artifactId>
-      <version>1.3.52</version>
+      <version>${openshift-client-version}</version>
     </dependency>
     <!-- testing -->
     <dependency>
