--- a/components/pom.xml
+++ b/components/pom.xml
@@ -152,6 +152,7 @@
     <module>camel-kafka</module>
     <module>camel-kestrel</module>
     <module>camel-krati</module>
+    <module>camel-kubernetes</module>
     <module>camel-kura</module>
     <module>camel-ldap</module>
     <module>camel-leveldb</module>
