--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -324,6 +324,7 @@
     <karaf3-version>3.0.2</karaf3-version>
     <kie-version>6.3.0.Final</kie-version>
     <krati-version>0.4.9</krati-version>
+    <kubernetes-client-version>1.3.52</kubernetes-client-version>
     <kxml2-bundle-version>2.3.0_2</kxml2-bundle-version>
     <leveldbjni-version>1.8</leveldbjni-version>
     <!-- virtual dependency only used by Eclipse m2e -->
@@ -391,6 +392,7 @@
     <openejb-version>4.7.2</openejb-version>
     <openjpa-version>2.4.0</openjpa-version>
     <openshift-java-client-version>2.7.0.Final</openshift-java-client-version>
+    <openshift-client-version>1.3.52</openshift-client-version>
     <optaplanner-version>6.3.0.Final</optaplanner-version>
     <oro-bundle-version>2.0.8_6</oro-bundle-version>
     <oscache-bundle-version>2.4_5</oscache-bundle-version>
@@ -1166,6 +1168,11 @@
       <dependency>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-kura</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
+        <artifactId>camel-kubernetes</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
