--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -252,6 +252,7 @@
     <javax.el-version>2.2.5</javax.el-version>
     <javax-inject-bundle-version>1_2</javax-inject-bundle-version>
     <javax-mail-version>1.4.7</javax-mail-version>
+    <javax.servlet-api-version>3.1.0</javax.servlet-api-version>
     <jaxb-bundle-version>2.2.6_1</jaxb-bundle-version>
     <jaxen-version>1.1.6</jaxen-version>
     <jbpm-version>6.3.0.Final</jbpm-version>
@@ -325,6 +326,7 @@
     <kie-version>6.3.0.Final</kie-version>
     <krati-version>0.4.9</krati-version>
     <kubernetes-client-version>1.3.52</kubernetes-client-version>
+    <kubernetes-model-version>1.0.29</kubernetes-model-version>
     <kxml2-bundle-version>2.3.0_2</kxml2-bundle-version>
     <leveldbjni-version>1.8</leveldbjni-version>
     <!-- virtual dependency only used by Eclipse m2e -->
@@ -384,6 +386,7 @@
     <noggit-bundle-version>0.5_1</noggit-bundle-version>
     <!-- should be in-sync with deltaspike -->
     <openwebbeans-version>1.2.0</openwebbeans-version>
+    <oauth-provider-bundle-version>20100527_1</oauth-provider-bundle-version>
     <olingo2-version>2.0.4</olingo2-version>
     <olingo-odata2-core-bundle-version>2.0.4_1</olingo-odata2-core-bundle-version>
     <ognl-version>3.0.11</ognl-version>
