--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -517,6 +517,7 @@
     <woodstox-version>4.4.1</woodstox-version>
     <ws-commons-util-bundle-version>1.0.2_2</ws-commons-util-bundle-version>
     <wsdl4j-bundle-version>1.6.2_6</wsdl4j-bundle-version>
+    <wsdl4j-version>1.6.2</wsdl4j-version>
     <xalan-bundle-version>2.7.2_2</xalan-bundle-version>
     <xalan-version>2.7.2</xalan-version>
     <xbean-spring-version>3.18</xbean-spring-version>
