Upgrade HttpComponents HttpClient to version 4.5.1 and HttpComponents HttpCore to version 4.4.4

--- a/components/camel-box/pom.xml
+++ b/components/camel-box/pom.xml
@@ -119,7 +119,7 @@
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpmime</artifactId>
-      <version>${httpcore4-version}</version>
+      <version>${httpclient4-version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
