CAMEL-9300: DeltaSpike container control dependency in Camel CDI should be optional

--- a/components/camel-cdi/pom.xml
+++ b/components/camel-cdi/pom.xml
@@ -86,6 +86,7 @@
       <groupId>org.apache.deltaspike.cdictrl</groupId>
       <artifactId>deltaspike-cdictrl-api</artifactId>
       <version>${deltaspike-version}</version>
+      <optional>true</optional>
     </dependency>
 
     <!-- logging -->
