CAMEL-9224 : Camel shell commands adapter for Spring Boot Remote shell. Fixes #670

--- a/platforms/commands/pom.xml
+++ b/platforms/commands/pom.xml
@@ -31,6 +31,7 @@
   <modules>
     <module>commands-core</module>
     <module>commands-jolokia</module>
+    <module>commands-spring-boot</module>
   </modules>
 
 </project>
