CAMEL-9224 : Camel shell commands adapter for Spring Boot Remote shell.

--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -908,6 +908,10 @@
       <groupId>org.apache.camel.karaf</groupId>
       <artifactId>camel-karaf-commands</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-commands-spring-boot</artifactId>
+    </dependency>
 
     <!-- camel examples -->
     <dependency>
