CAMEL-9334: Upgrade to spring 4.2.x and spring-boot 1.3.x

--- a/components/camel-test-spring3/pom.xml
+++ b/components/camel-test-spring3/pom.xml
@@ -27,7 +27,7 @@
 
     <artifactId>camel-test-spring3</artifactId>
     <packaging>bundle</packaging>
-    <name>Camel :: Test :: Spring 3.x</name>
+    <name>Camel :: Test :: Spring 3.x (deprecated)</name>
     <description>Camel Testing Library using JUnit and Spring 3.x</description>
 
     <properties>
