--- a/components/camel-test-spring40/pom.xml
+++ b/components/camel-test-spring40/pom.xml
@@ -27,7 +27,7 @@
 
   <artifactId>camel-test-spring40</artifactId>
   <packaging>bundle</packaging>
-  <name>Camel :: Test :: Spring 4.0</name>
+  <name>Camel :: Test :: Spring 4.0 (deprecated)</name>
   <description>Camel Testing Library using JUnit and Spring 4.0</description>
 
   <properties>
