--- a/platforms/catalog/pom.xml
+++ b/platforms/catalog/pom.xml
@@ -44,6 +44,7 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>${jackson2-version}</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
