Fixed missing components in osgi manifest

--- a/camel-core/pom.xml
+++ b/camel-core/pom.xml
@@ -69,8 +69,9 @@
       org.apache.camel.spi.ComponentResolver;component=properties,
       org.apache.camel.spi.ComponentResolver;component=ref,
       org.apache.camel.spi.ComponentResolver;component=rest,
-      org.apache.camel.spi.ComponentResolver;component=seda,
+      org.apache.camel.spi.ComponentResolver;component=rest-api,
       org.apache.camel.spi.ComponentResolver;component=scheduler,
+      org.apache.camel.spi.ComponentResolver;component=seda,
       org.apache.camel.spi.ComponentResolver;component=stub,
       org.apache.camel.spi.ComponentResolver;component=test,
       org.apache.camel.spi.ComponentResolver;component=timer,
@@ -83,9 +84,9 @@
       org.apache.camel.spi.DataFormatResolver;dataformat=zip,
       org.apache.camel.spi.LanguageResolver;language=bean,
       org.apache.camel.spi.LanguageResolver;language=constant,
+      org.apache.camel.spi.LanguageResolver;language=exchangeProperty,
       org.apache.camel.spi.LanguageResolver;language=file,
       org.apache.camel.spi.LanguageResolver;language=header,
-      org.apache.camel.spi.LanguageResolver;language=property,
       org.apache.camel.spi.LanguageResolver;language=ref,
       org.apache.camel.spi.LanguageResolver;language=simple,
       org.apache.camel.spi.LanguageResolver;language=tokenize,
