--- a/components/camel-zookeeper-master/pom.xml
+++ b/components/camel-zookeeper-master/pom.xml
@@ -35,6 +35,7 @@
     <properties>
         <!-- Zookeeper container is not available on this platform -->
         <skipITs.aarch64>true</skipITs.aarch64>
+        <skipITs.s390x>true</skipITs.s390x>
     </properties>
 
     <dependencies>
