--- a/test-infra/pom.xml
+++ b/test-infra/pom.xml
@@ -61,6 +61,7 @@
         <module>camel-test-infra-microprofile-lra</module>
         <module>camel-test-infra-minio</module>
         <module>camel-test-infra-nats</module>
+        <module>camel-test-infra-pinecone</module>
         <module>camel-test-infra-pulsar</module>
         <module>camel-test-infra-redis</module>
         <module>camel-test-infra-rocketmq</module>
