--- a/components/camel-salesforce/camel-salesforce-component/pom.xml
+++ b/components/camel-salesforce/camel-salesforce-component/pom.xml
@@ -254,7 +254,7 @@
                 <configuration>
                     <protocVersion>${protobuf-version}</protocVersion>
                     <sourceDirectories>
-                        <sourceDirectory>src/main/proto</sourceDirectory>
+                        <sourceDirectory>${project.basedir}/src/main/proto</sourceDirectory>
                     </sourceDirectories>
                     <binaryMavenPlugins>
                         <binaryMavenPlugin>
@@ -298,9 +298,9 @@
                         <phase>process-sources</phase>
                         <configuration>
                             <target>
-                                <replace token= "@javax.annotation.Generated"
+                                <replace token="@javax.annotation.Generated"
                                          value="@jakarta.annotation.Generated"
-                                         dir="target/generated-sources/protobuf">
+                                         dir="${project.basedir}/target/generated-sources/protobuf">
                                     <include name="**/*.java"/>
                                 </replace>
                             </target>
