--- a/components/camel-ai/camel-tensorflow-serving/pom.xml
+++ b/components/camel-ai/camel-tensorflow-serving/pom.xml
@@ -106,7 +106,7 @@
                 <configuration>
                     <protocVersion>${protobuf-version}</protocVersion>
                     <sourceDirectories>
-                        <sourceDirectory>src/main/proto</sourceDirectory>
+                        <sourceDirectory>${project.basedir}/src/main/proto</sourceDirectory>
                     </sourceDirectories>
                     <binaryMavenPlugins>
                         <binaryMavenPlugin>
