Upgrade protobuf-maven-plugin 3.1.3

--- a/components/camel-protobuf/pom.xml
+++ b/components/camel-protobuf/pom.xml
@@ -121,7 +121,7 @@
                 <configuration>
                     <protocVersion>${protobuf-version}</protocVersion>
                     <sourceDirectories>
-                        <sourceDirectory>src/test/proto</sourceDirectory>
+                        <sourceDirectory>${project.basedir}/src/test/proto</sourceDirectory>
                     </sourceDirectories>
                     <binaryMavenPlugins>
                         <binaryMavenPlugin>
