feat(components): micrometer observability telemetry impl
Closes CAMEL-21869

--- a/catalog/camel-allcomponents/pom.xml
+++ b/catalog/camel-allcomponents/pom.xml
@@ -1273,6 +1273,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-micrometer-observability</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-micrometer-prometheus</artifactId>
             <version>${project.version}</version>
         </dependency>
